# climatesense-checkthat2025

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  burel2025clef.bib  pipeline.yaml  pyproject.toml
.github/workflows/: push.yml
climatesense_checkthat2025/: __init__.py
climatesense_checkthat2025/heuristics/: cat1_sciknowledge.py  cat2_sciurl.py  cat3_research.py
climatesense_checkthat2025/utils/: data.py  rerank_playground.py  utils.py
climatesense_checkthat2025_task4/: __init__.py
climatesense_checkthat2025_task4/utils/: data.py  nlp.py  rerank-playground.py
data/heuristics/: README.md  news_outlets_domains.csv  science_mags_domains.csv
data/processed/task4/subtask_4a/: ct_dev_clean.tsv  ct_dev_clean_heuristics.tsv  ct_eval_heuristics.tsv  ct_train_clean.tsv  ct_train_clean_heuristics.csv  ct_train_data_clean.tsv  ct_train_oversamples_scientific_claim.tsv  ct_train_oversamples_scientific_claim_heuristics.tsv  ct_train_oversamples_scientific_entities.tsv  ct_train_oversamples_scientific_entities_heuristics.tsv  ct_train_oversamples_scientific_reference.tsv  ct_train_oversamples_scientific_reference_heuristics.tsv  scitweets_data.tsv  scitweets_data_clean.tsv  sciwebclaims_data.tsv  sciwebclaims_data_clean.tsv
data/processed/task4/subtask_4b/: subtask4b_query_tweets_clean.tsv  subtask4b_query_tweets_dev_clean.tsv  subtask4b_query_tweets_train_clean.tsv
data/raw/task4/: README.md
data/raw/task4/sciwebclaims/: consolidated_task1.tsv  consolidated_task2.tsv  consolidated_task3.tsv
data/raw/task4/subtask_4a/: README.md  baselines.ipynb
data/raw/task4/subtask_4b/: README.md  getting_started_subtask4b.ipynb  subtask4b_query_tweets.tsv
notebooks/task4a/: 1__clean_dataset.ipynb  1__clean_dataset_and_stats.ipynb  1a__clean_dataset_and_stats.ipynb  1b__paraphraser_oversampler.ipynb  1c__heuristics.ipynb  2__baseline.ipynb  2__baselines.ipynb  3__setfit.ipynb  4__baseline_hierarchy.ipynb  5__embeddings.ipynb  6__heuristics.ipynb  7__parallel_baseline.ipynb  8__parallel_setfit.ipynb
notebooks/task4b/: 00_Retrievers.ipynb  0__ReRanker.ipynb  1__clean_dataset_and_stats.ipynb  parameters.txt
task1/: README.md  requirements.txt
task1/baseline/: baseline.py
task1/llm/: run.py
task1/scorer/: evaluate.py  evaluate_block.py
task1/submission/: task1_test_mono_arabic.tsv  task1_test_mono_english.tsv  task1_test_mono_german.tsv  task1_test_mono_italian.tsv  task1_test_multilingual.tsv  task1_test_zero_greek.tsv  task1_test_zero_polish.tsv  task1_test_zero_romanian.tsv  task1_test_zero_ukrainian.tsv
